--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="Lista">
-        <h1 id="Titulo">Lojinha do Sr. Miagui</h1>
+        <h1 id="Titulo">Lojinha do Sr. Miagui</h1><br>
     </div>
 
     <script src="./interaction.js"></script>
